--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
     </div>
     <br>
     <div class="container4">
-        <div><img src="Downloads/fashion4.jpeg" alt="fashion">
+        <div><img src="outfit16.jpeg" alt="fashion">
         <p>Shop Wear</p>
         </div>
-        <div><img src="Downloads/fashion5.jpeg" alt="fashion">
+        <div><img src="outfit11.jpeg" alt="fashion">
         <p>Shop Wear</p>
         </div>
-        <div><img src="Downloads/perfume.jpeg" alt="fashion">
+        <div><img src="perfume.jpeg" alt="fashion">
         <p>Shop Accesories</p>
         </div>
     </div>
